--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -1,9 +1,9 @@
 /*
-Theme Name: Meipaly
-Theme URI: http://layerdrops.com/
-Author: Layerdrops
-Author URI: http://layerdrops.com/
-Description: Meipaly - Digital Services Agency HTML5 Responsive Template
+Theme Name: Meipaly by ParsonsHosting
+Theme URI: http://parsonshosting.com/
+Author: ParsonsHosting
+Author URI: http://parsonshosting.com/
+Description: Gatsby - ParsonsHosting
 Version: 1.0
 License:
 License URI:
@@ -1995,7 +1995,7 @@ License URI:
   margin: 0 0 31px;
 }
 .serviceArea h3 {
-  line-height: 0.8;
+  line-height: 1.1;
   text-transform: uppercase;
   letter-spacing: 1.2px;
   color: #000000;
