--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -1,9 +1,9 @@
 /*
-Theme Name: Meipaly
-Theme URI: http://layerdrops.com/
-Author: Layerdrops
-Author URI: http://layerdrops.com/
-Description: Meipaly - Digital Services Agency HTML5 Responsive Template
+Theme Name: The Trinity Guide by ParsonsHosting
+Theme URI: http://parsonshosting.com/
+Author: ParsonsHosting
+Author URI: http://parsonshosting.com/
+Description: Gatsby - ParsonsHosting
 Version: 1.0
 License:
 License URI:
