--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Meipaly by ParsonsHosting
+Theme Name: The Trinity Guide by ParsonsHosting
 Theme URI: http://parsonshosting.com/
 Author: ParsonsHosting
 Author URI: http://parsonshosting.com/
@@ -22,13 +22,13 @@ License URI:
 8. Trust Client Section
 9. Team Section
 10. Our Clients Section
-11. Testimonail Section
+11. Testimonial Section
 12. Blog Section
 13. Ready Section
 14. Footer Section
-15. Servieces 2 Section
+15. Services 2 Section
 16. Featured Section
-17. Tesimonial 02 Section
+17. Testimonial 02 Section
 18. Why Choose Us Section
 19. What We Do 2 Section
 20. Google Map Section
@@ -36,11 +36,11 @@ License URI:
 22. Service Page
 23. Portfolio Page
 24. Blog Page
-25. Contct Page
+25. Contact Page
 26. Popup Search
 27. Popup Menu
-28. preloder
-29. Bact To Top
+28. preloader
+29. Back To Top
 30. Color Preset
 */
 
@@ -55,7 +55,6 @@ License URI:
   z-index: 5;
   background: transparent;
   padding: 39px 40px 0 45px;
-  border-bottom: 2px solid rgba(255, 255, 255, 0.1);
 }
 .logo {
   text-align: left;
@@ -64,6 +63,10 @@ License URI:
 .logo img {
   max-width: 100%;
   height: auto;
+}
+.logo h1 {
+  font-size: calc( 16px + (24 - 16)*(100vw - 400px)/(1100 - 100));
+  color: #fff;
 }
 .mainmenu {
   position: relative;
@@ -681,7 +684,7 @@ License URI:
 .singlefunfact h3 {
   text-transform: uppercase;
   font-size: 16px;
-  line-height: 0.8;
+  line-height: 1.3;
   color: #aaaaaa;
   letter-spacing: 1.6px;
   margin: 0;
@@ -2965,6 +2968,12 @@ textarea.input-form:focus {
   bottom: 40px;
   margin: 0;
   padding-left: 0;
+}
+.footer__contacts a {
+  color: #FCB017;
+}
+.footer__contacts a:hover {
+  color: #818181;
 }
 .popUp_social {
   position: absolute;
